--- a/public/index.html
+++ b/public/index.html
@@ -18,26 +18,23 @@
   </div>
   <div class="container">
     <h1>Eat-This-BURGER!</h1>
-
     <h2>Burger Has Been EATEN!</h2>
-
     <ul id="notDevouredBurgers"></ul>
-
     <h2>Burger: Ready To EAT!</h2>
-
     <ul id="devouredBurgers"></ul>
-
     <h2>Add a Burger</h2>
     <form class="create-form">
       <div class="form-group">
         <label for="ca">Type of Burger:</label>
         <input type="text" id="ca" name="name" />
       </div>
+      <div class="form-group">
+        <label for="sleepy">Sleepy?</label><br />
+        <input type="radio" name="sleepy" value="1" checked /> Sleepy!<br />
+        <input type="radio" name="sleepy" value="0" /> Awake
+      </div>
       <button id="add-burger" type="submit">Add Burger</button>
-      <p>Enter a urger you'd like to eat and Click 'Add Burger'</p>
     </form>
-
-
   </div>
 
 </body>
