Changed all the sleepy fields in all files and my app is now fully functinal.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-  <title>MVC With Cats!</title>
+  <title>Burger Time!</title>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/assets/js/burgers.js"></script>
 </head>
@@ -17,7 +17,7 @@
       alt="burger image" style="height: 250px; width: 400px;">
   </div>
   <div class="container">
-    <h1>Eat-This-BURGER!</h1>
+    <h1>BURGE TIME! READY, SET, GO!</h1>
     <h2>Burger Has Been EATEN!</h2>
     <ul id="notDevouredBurgers"></ul>
     <h2>Burger: Ready To EAT!</h2>
@@ -29,9 +29,9 @@
         <input type="text" id="ca" name="name" />
       </div>
       <div class="form-group">
-        <label for="sleepy">Sleepy?</label><br />
-        <input type="radio" name="sleepy" value="1" checked /> Sleepy!<br />
-        <input type="radio" name="sleepy" value="0" /> Awake
+        <label for="devoured">Devoured?</label><br />
+        <input type="radio" name="devoured" value="1" checked /> Devoured!<br />
+        <input type="radio" name="devoured" value="0" /> Awake
       </div>
       <button id="add-burger" type="submit">Add Burger</button>
     </form>
