--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,21 @@
       alt="burger image" style="height: 250px; width: 400px;">
   </div>
   <div class="container">
-    <h1>BURGE TIME! READY, SET, GO!</h1>
+    <h1>BURGER TIME! READY, SET, GO!</h1>
     <h2>Burger Has Been EATEN!</h2>
-    <ul id="notDevouredBurgers"></ul>
-    <h2>Burger: Ready To EAT!</h2>
-    <ul id="devouredBurgers"></ul>
-    <h2>Add a Burger</h2>
+    <p id="notDevouredBurgers"></p>
+    <h4>Burger: Ready To EAT!</h4>
+    <p id="devouredBurgers"></p>
+    <!-- <h3>Add a Burger</h3> -->
     <form class="create-form">
       <div class="form-group">
         <label for="ca">Type of Burger:</label>
         <input type="text" id="ca" name="name" />
       </div>
       <div class="form-group">
-        <label for="devoured">Devoured?</label><br />
-        <input type="radio" name="devoured" value="1" checked /> Devoured!<br />
-        <input type="radio" name="devoured" value="0" /> Awake
+        <!-- <label for="devoured">Devoured?</label><br /> -->
+        <input type="radio" name="devoured" value="1" checked /> Burger - Ready!<br />
+        <!-- <input type="radio" name="devoured" value="0" /> Awake -->
       </div>
       <button id="add-burger" type="submit">Add Burger</button>
     </form>
