--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,14 @@
     <p id="notDevouredBurgers"></p>
     <h4>Burger: Ready To EAT!</h4>
     <p id="devouredBurgers"></p>
-    <!-- <h3>Add a Burger</h3> -->
     <form class="create-form">
       <div class="form-group">
-        <label for="ca">Type of Burger:</label>
-        <input type="text" id="ca" name="name" />
+        <input placeholder="Burger Type" type="text" id="ca" name="name" />
       </div>
       <div class="form-group">
         <!-- <label for="devoured">Devoured?</label><br /> -->
         <input type="radio" name="devoured" value="1" checked /> Burger - Ready!<br />
-        <!-- <input type="radio" name="devoured" value="0" /> Awake -->
+        <!-- <input type="radio" name="devoured" value="0" /> -->
       </div>
       <button id="add-burger" type="submit">Add Burger</button>
     </form>
